relay-general/src/pii/snapshots/relay_general__pii__processor__tests__no_field_upsert.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "extra": null,
  "_meta": {
    "extra": {
      "": {
        "rem": [
          [
            "@anything:remove",
            "x"
          ]
        ]
      }
    }
  }
}
