relay-general/src/pii/snapshots/relay_general__pii__processor__tests__quoted_keys.snap
---
source: relay-general/src/pii/processor.rs
expression: event
---
{
  "extra": {
    "do not ,./<>?!@#$%^&*())'ßtrip'": "foo",
    "special ,./<>?!@#$%^&*())'gärbage'": null
  },
  "_meta": {
    "extra": {
      "special ,./<>?!@#$%^&*())'gärbage'": {
        "": {
          "rem": [
            [
              "@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
