relay-general/src/pii/snapshots/relay_general__pii__processor__tests__scrub_breadcrumb_data_http_not_scrubbed.snap
---
source: relay-general/src/pii/processor.rs
expression: breadcrumb
---
{
  "data": {
    "http": {
      "query": "dance=true"
    }
  }
}
