relay-general/src/pii/snapshots/relay_general__pii__processor__tests__scrub_breadcrumb_data_http_strings_are_scrubbed.snap
---
source: relay-general/src/pii/processor.rs
expression: breadcrumb
---
{
  "data": {
    "http": {
      "fragment": "ccnumber=[Filtered],process_id=123",
      "query": "ccnumber=[Filtered]&process_id=123"
    }
  },
  "_meta": {
    "data": {
      "http": {
        "fragment": {
          "": {
            "rem": [
              [
                "@creditcard:filter",
                "s",
                9,
                19
              ]
            ],
            "len": 40
          }
        },
        "query": {
          "": {
            "rem": [
              [
                "@creditcard:filter",
                "s",
                9,
                19
              ]
            ],
            "len": 40
          }
        }
      }
    }
  }
}
